Correct chart alignment

--- a/personal-budget/src/styles.scss
+++ b/personal-budget/src/styles.scss
@@ -463,7 +463,7 @@ body {
 }
 
 svg {
-  width: 100%;
+  width: 60%;
   height: 100%;
 }
 
